Performance and Thermal profiles. Per App and system wide. Device specific. Ask your device maintainer to add support!
Change-Id: I0823f598f2008c27870ec455c1f6e997622323fe

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,6 +69,29 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".AppProfilesActivity"
+            android:label="@string/app_settings_title">
+            <intent-filter>
+                <action android:name="ru.baikalos.extras.AppProfilesActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".AppProfileActivity"
+            android:label="@string/app_settings_title">
+            <intent-filter>
+                <action android:name="ru.baikalos.extras.AppProfileActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
+
+
+
         <receiver
             android:name=".romstats.ReportingServiceManager"
             android:enabled="true"
