--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,7 @@
 
         <activity
             android:name=".changelog.ChangelogActivity"
+            android:theme="@style/ChangelogTheme"
             android:label="@string/changelog_name">
             <intent-filter>
                 <action android:name="ru.baikalos.extras.ViewChangelog" />
