--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
@@ -97,7 +98,7 @@
             </intent-filter>
         </activity>
 
-        <receiver
+        <!-- receiver
             android:name=".romstats.ReportingServiceManager"
             android:enabled="true"
             android:exported="false"
@@ -106,14 +107,14 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
-        </receiver>
+        </receiver -->
 
-        <service
+        <!-- service
             android:name=".romstats.ReportingService"
             android:enabled="true"
             android:exported="false"
             android:label="ReportingService" >
-        </service>
+        </service -->
 
         <receiver android:name="ru.baikalos.extras.utils.OnBoot">
             <intent-filter>
